--- a/data/style.css
+++ b/data/style.css
@@ -71,7 +71,7 @@ input[type=submit] {
    width: 80%;
    line-height: 24px;
    padding: 5px 0px 5px 0px;
-   margin 0;
+   margin: 0;
    text-decoration: none;
    border: 1px solid rgba(255,255,255,0.3);
    border-radius: 5px;
@@ -138,4 +138,3 @@ svg {
         width: 320px;
     }
 }
-
